--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   lan_scanner: ^4.0.0+1
   flutter_secure_storage: ^9.2.4
   get: ^4.7.2
+  socket_io_client: ^3.1.2
 
 dev_dependencies:
   flutter_test:
