--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   get: ^4.7.2
   socket_io_client: ^3.1.2
+  sqflite: ^2.4.2
+  sqflite_common_ffi: ^2.3.6
 
 dev_dependencies:
   flutter_test:
