--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   socket_io_client: ^3.1.2
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.6
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
